tests/miniJava/neg/000256_mutation.MiniJava
class java { public static void Main class java { } ( String [ ] java ) { { } } }
